--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - images/
-   - assets/
+   - assets/images/
 
   #   - images/a_dot_ham.jpeg
 
