--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   dio: ^4.0.6
+  firebase_core: ^2.4.0
+  firebase_database: ^10.0.7
+  cloud_firestore: ^4.2.0
 
 dev_dependencies:
   flutter_test:
