--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.15
   dio: ^4.0.6
   firebase_core: ^2.4.0
+  firebase_auth: ^4.2.0
   firebase_database: ^10.0.7
   cloud_firestore: ^4.2.0
 
