--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +41,11 @@ dependencies:
   firebase_auth: ^4.2.0
   firebase_database: ^10.0.7
   cloud_firestore: ^4.2.0
+  date_time_picker: ^2.1.0
+  intl: ^0.18.0
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/
+    - assets/images/
 
   #   - images/a_dot_ham.jpeg
 
