--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   get_it: ^7.2.0
+  mask_text_input_formatter: ^2.4.0
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
