botões de navegação

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
     sdk: flutter
   get_it: ^7.2.0
   flutter_masked_text2: ^0.9.1
+  mocktail: ^0.3.0
+  fake_cloud_firestore: ^2.3.0+3
 
 dev_dependencies:
   flutter_test:
