--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,9 +48,12 @@ dependencies:
   flutter_masked_text2: ^0.9.1
   mask_text_input_formatter: ^2.4.0
   get_it: ^7.2.0
+  charts_flutter: ^0.11.0
 
   flutter_localizations:
     sdk: flutter
+  fl_chart: ^0.60.0
+  syncfusion_flutter_charts: ^20.4.44
 
 dev_dependencies:
   flutter_test:
